--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,23 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PostUp</title>
   <!-- googlefonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk&family=Hanken+Grotesk:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@700&display=swap" rel="stylesheet">
   <!-- stylesheet -->
   <link rel="stylesheet" href="css/style.css">
+  {{!-- custom raw cdn styling from my github using https://raw.githack.com testing purpose --}}
+  {{!-- <link rel="stylesheet" type="text/css" href="https://rawcdn.githack.com/Vin7ag3/cdncss/main/style.css?token=GHSAT0AAAAAACJG2VSSOPDIODT2GBLCGNUYZJUIZAA
+    "> --}}
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <!-- javascript -->
-  <script src="/js/script.js"></script>
-
-
-
 </head>
 
 <body>
+{{!-- {{> header }} --}}
+{{{ body }}}
+{{!-- {{> filter }} --}}
+{{> products }}
+{{> footer }}
+<!-- javascript -->
+<script src="js/script.js"></script>
+<script src="js/nav.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.2/min/dropzone.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.2/min/dropzone.min.js"></script>
 
-  {{{ body }}}
- {{> products}}
+{{!-- cdn library some old but works for what i need newer ones didnt seem to work oddly --}}
+<script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
-
-
 </html>
