--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@700&display=swap" rel="stylesheet">
   <!-- stylesheet -->
   <link rel="stylesheet" href="css/style.css">
-  {{!-- custom raw cdn styling from my github using https://raw.githack.com testing purpose --}}
+  {{!-- raw cdn styling from my github using https://raw.githack.com testing purpose --}}
   {{!-- <link rel="stylesheet" type="text/css" href="https://rawcdn.githack.com/Vin7ag3/cdncss/main/style.css?token=GHSAT0AAAAAACJG2VSSOPDIODT2GBLCGNUYZJUIZAA
     "> --}}
   <!-- bootstrap -->
