--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,3 +1,3 @@
 <footer>
-     <p>Copyright &copy; Team 5 - Vince Peo, Matt Estin, Shayla Morris, and Derek Dang 2023 All Rights Reserved.</p>
+     <p>&copy;PostUp Team 5 - Vince Peo, Matt Estin, Shayla Morris, and Derek Dang 2023 All Rights Reserved.</p>
 </footer>
