--- a/views/partials/products.handlebars
+++ b/views/partials/products.handlebars
@@ -1,17 +1,17 @@
-<div class="container my-4 grid-products">
+<main class="container my-4 grid-products">
   <h4 class="posts-title vertical">Posts</h4>
-  <div class="gridone m-0 p-0">
+  <section class="gridone m-0 p-0">
     {{#each products}}
-      <div class="item" data-date="{{date}}">
+      <section class="item" data-date="{{date}}">
         {{!-- <a href="#"> --}}
            <img class="img-fluid" src="{{imageUrl}}" alt="{{name}}">
-          <div class="product-style">
+          <section class="product-style">
             <h2>{{name}}</h2>
             <p>{{description}}</p>
             <p>Price: {{price}}</p>
-          </div>
+          </section>
         {{!-- </a> --}}
-      </div>
+      </section>
     {{/each}}
-  </div>
-</div>
+      </section>
+</main>
