--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -8,7 +8,7 @@
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Username">
       <input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password">
-      <button class="btn-up my-2 my-sm-0" type="submit">Login</button>
+      <button href="members.handlebars"class="btn-up my-2 my-sm-0" type="submit">Login</button>
     </form>
   </navbar>
 </nav>
