unblurs posts when login button is clicked(future development)

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,3 +1,4 @@
+<script src="js/script.js"></script>
 <nav class="navbar navbar-dark navbarpost"> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03">
     <navbar class="navbar-toggler-icon"></navbar>
@@ -8,7 +9,7 @@
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Username">
       <input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password">
-      <button onclick="unblurImage()" class="btn-up my-2 my-sm-0" type="submit">Login</button>
+      <button onclick="removeBlur()" class="btn-up my-2 my-sm-0" type="submit">Login</button>
     </form>
   </navbar>
 </nav>
