--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,10 +10,10 @@
   --mountain-mist: #96949c;
   --white: #ffffff;
 }
-
+/* 
 #myImage{
   filter: blur(5px);
-}
+} */
 
 * {
   font-family: 'Hanken Grotesk', sans-serif;
