fixed code from previous commit

--- a/views/partials/products.handlebars
+++ b/views/partials/products.handlebars
@@ -4,7 +4,7 @@
     {{#each products}}
       <section class="item" data-date="{{date}}">
         {{!-- <a href="#"> --}}
-           <img class="img-fluid" {{!id="myImage" src="{{imageUrl}}\ alt="{{name}}">
+           <img class="img-fluid" {{!id="myImage"}} src="{{imageUrl}}" alt="{{name}}">
           <section class="product-style">
             <h2>{{name}}</h2>
             <p>{{description}}</p>
